--- a/index.html
+++ b/index.html
@@ -1,14 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Voice ChatGPT Demo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Voice AI Assistant</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #f9fafb, #eef1f5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      padding: 1rem;
+    }
+
+    .container {
+      background: white;
+      border-radius: 16px;
+      box-shadow: 0 12px 20px rgba(0,0,0,0.08);
+      padding: 2rem;
+      max-width: 500px;
+      width: 100%;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      color: #333;
+    }
+
+    button {
+      background: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 9999px;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 0.3s;
+      margin-top: 1rem;
+    }
+
+    button:hover {
+      background: #4338ca;
+    }
+
+    .output {
+      margin-top: 1.5rem;
+      text-align: left;
+    }
+
+    .label {
+      font-weight: 600;
+      color: #555;
+      margin-bottom: 0.25rem;
+    }
+
+    .bubble {
+      background: #f3f4f6;
+      padding: 0.75rem;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      word-wrap: break-word;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      button {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h2>Ask me anything!</h2>
-  <button id="start">🎤 Start Talking</button>
-  <p><strong>You said:</strong> <span id="transcript"></span></p>
-  <p><strong>Assistant says:</strong> <span id="response"></span></p>
+  <div class="container">
+    <h1>🎤 Talk to Your AI Assistant</h1>
+    <button id="start">Start Talking</button>
+
+    <div class="output">
+      <div class="label">You said:</div>
+      <div class="bubble" id="transcript">–</div>
+
+      <div class="label">Assistant replied:</div>
+      <div class="bubble" id="response">–</div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
