--- a/index.html
+++ b/index.html
@@ -3,95 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Voice AI Assistant</title>
+  <title>Datepalm – Voice Chat</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --bg: #f9fafb;
+      --primary: #111827;
+      --accent: #4f46e5;
+      --bubble-user: #e0e7ff;
+      --bubble-bot: #f3f4f6;
+    }
+
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to right, #f9fafb, #eef1f5);
+      background-color: var(--bg);
+      margin: 0;
+      padding: 2rem 1rem;
+      color: var(--primary);
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      padding: 1rem;
     }
 
     .container {
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 12px 20px rgba(0,0,0,0.08);
-      padding: 2rem;
-      max-width: 500px;
       width: 100%;
-      text-align: center;
+      max-width: 700px;
     }
 
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-      color: #333;
+    .header {
+      font-size: 1.5rem;
+      font-weight: 600;
+      margin-bottom: 2rem;
     }
 
-    button {
-      background: #4f46e5;
+    .chat {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      overflow-y: auto;
+      max-height: 75vh;
+      padding-right: 10px;
+    }
+
+    .message {
+      max-width: 80%;
+      padding: 0.75rem 1rem;
+      border-radius: 12px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+
+    .user {
+      align-self: flex-start;
+      background-color: var(--bubble-user);
+    }
+
+    .bot {
+      align-self: flex-start;
+      background-color: var(--bubble-bot);
+    }
+
+    .mic-button {
+      background: var(--accent);
       color: white;
       border: none;
-      border-radius: 9999px;
-      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      padding: 0.75rem 1.25rem;
       font-size: 1rem;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.3s;
-      margin-top: 1rem;
-    }
-
-    button:hover {
-      background: #4338ca;
-    }
-
-    .output {
       margin-top: 1.5rem;
-      text-align: left;
+      transition: background 0.3s;
     }
 
-    .label {
-      font-weight: 600;
-      color: #555;
-      margin-bottom: 0.25rem;
-    }
-
-    .bubble {
-      background: #f3f4f6;
-      padding: 0.75rem;
-      border-radius: 12px;
-      margin-bottom: 1rem;
-      word-wrap: break-word;
-    }
-
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      button {
-        width: 100%;
-      }
+    .mic-button:hover {
+      background: #4338ca;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>🎤 Talk to Your AI Assistant</h1>
-    <button id="start">Start Talking</button>
-
-    <div class="output">
-      <div class="label">You said:</div>
-      <div class="bubble" id="transcript">–</div>
-
-      <div class="label">Assistant replied:</div>
-      <div class="bubble" id="response">–</div>
-    </div>
+    <div class="header">🌴 <strong>Datepalm</strong> – sage advice for early dating</div>
+    <div id="chat" class="chat"></div>
+    <button id="start" class="mic-button">🎤 Start Talking</button>
   </div>
 
   <script src="script.js"></script>
