--- a/index.html
+++ b/index.html
@@ -1,54 +1,71 @@
-const chatEl = document.getElementById("chat");
-const inputEl = document.getElementById("user-input");
-const sendBtn = document.getElementById("send-btn");
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>datepalm</title>
+  <style>
+    body {
+      font-family: "Helvetica Neue", sans-serif;
+      margin: 0;
+      background: #f8f8f8;
+      color: #222;
+      padding: 1rem 2rem;
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1.5rem;
+    }
+    .subtitle {
+      font-size: 0.9rem;
+      color: #777;
+      margin-bottom: 2rem;
+    }
+    #chat {
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
+    .message {
+      margin-bottom: 1rem;
+      line-height: 1.4;
+    }
+    .assistant {
+      color: #444;
+    }
+    .user {
+      color: #1a73e8;
+    }
+    #controls {
+      display: flex;
+      gap: 1rem;
+    }
+    #user-input {
+      flex: 1;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+    #send-btn {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      background: #1a73e8;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <div class="logo">datepalm</div>
+  <div class="subtitle">sage advice for early dating</div>
 
-const addMessage = (role, content) => {
-  const msg = document.createElement("div");
-  msg.className = `message ${role}`;
-  msg.textContent = content;
-  chatEl.appendChild(msg);
-  chatEl.scrollTop = chatEl.scrollHeight;
-};
+  <div id="chat"></div>
 
-const sendMessage = async (text) => {
-  addMessage("user", text);
-  const res = await fetch("/api/chat", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message: text }),
-  });
-  const data = await res.json();
-  addMessage("assistant", data.reply);
-};
+  <div id="controls">
+    <input id="user-input" placeholder="Say something..." />
+    <button id="send-btn">Send</button>
+  </div>
 
-sendBtn.addEventListener("click", () => {
-  const text = inputEl.value.trim();
-  if (!text) return;
-  inputEl.value = "";
-  sendMessage(text);
-});
-
-// Voice Input (Web Speech API)
-const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-recognition.lang = "en-US";
-recognition.interimResults = false;
-recognition.maxAlternatives = 1;
-
-// Trigger voice input when user presses Enter in input
-inputEl.addEventListener("focus", () => recognition.start());
-recognition.addEventListener("result", (e) => {
-  const transcript = e.results[0][0].transcript;
-  inputEl.value = transcript;
-  sendBtn.click();
-});
-
-// Load assistant's greeting on page load
-window.addEventListener("DOMContentLoaded", async () => {
-  const res = await fetch("/api/chat", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ message: "" }),
-  });
-  const data = await res.json();
-  addMessage("assistant", data.reply);
-});
+  <script src="/script.js"></script>
+</body>
+</html>
