--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
       border: none;
       cursor: pointer;
     }
+    .input-area {
+      display: flex;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .message.preview {
+      font-style: italic;
+      color: gray;
+    }
+
   </style>
 </head>
 <body>
@@ -62,8 +86,10 @@
   <div id="chat"></div>
 
   <div id="controls">
-    <input id="user-input" placeholder="Say something..." />
-    <button id="send-btn">Send</button>
+    <div class="input-area">
+      <button id="speak-btn">🎤 Click to Speak</button>
+      <button id="send-btn" disabled>📤 Send</button>
+    </div>
   </div>
 
   <script src="/script.js"></script>
