add a 'thinking' state

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
       color: #666;
       margin-top: 4px;
     }
+    .message.thinking {
+      background-color: #f8f9fa;  /* Light gray */
+      color: #6c757d;             /* Dark gray text */
+      font-style: italic;
+      text-align: center;
+      opacity: 0.8;
+    }
 
 
   </style>
