restoring to a previous version before duplicates started showing up

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <p class="subtitle">sage advice for early dating</p>
   </header>
 
-  <div id="chat">Warming up.. Just a second ..</div>
+  <div id="chat"></div>
 
   <div id="controls">
     <div class="input-area">
