--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
     <p class="subtitle">sage advice for early dating</p>
   </header>
 
-  <div id="chat"></div>
+  <div id="chat"><div id="warming-up" class="message thinking">
+    Warming up... please wait...
+  </div></div>
 
   <div id="controls">
     <div class="input-area">
